--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>actor-adaptor</groupId>
 		<artifactId>adaptor-parent</artifactId>
-                <version>1.0-SNAPSHOT</version>
-                <relativePath>adaptor-parent</relativePath>
+		<version>1.0-SNAPSHOT</version>
+		<relativePath>adaptor-parent</relativePath>
 	</parent>
 
 	<groupId>actor-adaptor</groupId>
@@ -18,5 +17,6 @@
 
 	<modules>
 		<module>messages</module>
-	</modules>
+		<module>webapp</module>
+  </modules>
 </project>
