add restful ws.

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>actor-adaptor</groupId>
-		<artifactId>adaptor-parent</artifactId>
+		<artifactId>actor-adaptor</artifactId>
 		<version>1.0-SNAPSHOT</version>
-		<relativePath>../adaptor-parent</relativePath>
+		<relativePath>..</relativePath>
 	</parent>
 
 	<groupId>actor-adaptor</groupId>
@@ -16,12 +16,17 @@
 	<version>1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>webapp</name>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>actor-adaptor</groupId>
 			<artifactId>messages</artifactId>
 			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet-core</artifactId>
+			<version>${jersey.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -30,7 +35,20 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
 	<build>
-		<finalName>webapp</finalName>
+		<finalName>${project.artifactId}</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
+				<configuration>
+					<source>${java.source.version}</source>
+					<target>${java.class.version}</target>
+					<encoding>${source.encoding}</encoding>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
