--- a/messages/pom.xml
+++ b/messages/pom.xml
@@ -3,9 +3,8 @@
 
 	<parent>
 		<groupId>actor-adaptor</groupId>
-		<artifactId>adaptor-parent</artifactId>
+		<artifactId>actor-adaptor</artifactId>
 		<version>1.0-SNAPSHOT</version>
-		<relativePath>../adaptor-parent</relativePath>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -14,6 +13,18 @@
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<name>messages</name>
+	
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.glassfish.jersey</groupId>
+				<artifactId>jersey-bom</artifactId>
+				<version>${jersey.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 		<dependency>
