--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 	version="3.0">
 	<display-name>Actor System RESTful Adaptor</display-name>
 	<welcome-file-list>
-		<welcome-file>index.jspx</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 	<servlet>
 		<servlet-name>Jersey Web Application</servlet-name>
