add test components.

--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,8 @@
 		<module>messages</module>
 		<module>webapp</module>
     <module>component-manager</module>
+    <module>test</module>
+    <module>test-component</module>
+    <module>actor-system</module>
   </modules>
 </project>
