--- a/adaptor-parent/pom.xml
+++ b/adaptor-parent/pom.xml
@@ -19,7 +19,7 @@
 		<jaxb-impl.version>2.1.13</jaxb-impl.version>
 		<servlet-api.version>3.1.0</servlet-api.version>
 		<spring.version>4.3.0.RELEASE</spring.version>
-    	<jersey.version>2.25</jersey.version>
+		<jersey.version>2.25</jersey.version>
 		<commons-beanutils.version>1.9.2</commons-beanutils.version>
 		<joda-time.version>2.9.4</joda-time.version>
 		<javax.mail.version>1.4.7</javax.mail.version>
@@ -62,6 +62,26 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.scala-tools</groupId>
+				<artifactId>maven-scala-plugin</artifactId>
+				<version>2.15.2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+							<goal>testCompile</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<sourceDir>src/main/java</sourceDir>
+					<jvmArgs>
+						<jvmArg>-Xms64m</jvmArg>
+						<jvmArg>-Xmx1024m</jvmArg>
+					</jvmArgs>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
