--- a/test-component/.classpath
+++ b/test-component/.classpath
@@ -4,14 +4,15 @@
   <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-  <classpathentry kind="var" path="M2_REPO/org/scala-lang/scala-library/2.11.8/scala-library-2.11.8.jar" sourcepath="M2_REPO/org/scala-lang/scala-library/2.11.8/scala-library-2.11.8-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/home/master/.m2/repository/org/scala-lang/scala-library/2.11.8/scala-library-2.11.8-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/actor-adaptor/component-manager/1.0-SNAPSHOT/component-manager-1.0-SNAPSHOT.jar" sourcepath="M2_REPO/actor-adaptor/component-manager/1.0-SNAPSHOT/component-manager-1.0-SNAPSHOT-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/typesafe/akka/akka-actor_2.11/2.4.11/akka-actor_2.11-2.4.11.jar" sourcepath="M2_REPO/com/typesafe/akka/akka-actor_2.11/2.4.11/akka-actor_2.11-2.4.11-sources.jar">
     <attributes>
       <attribute value="jar:file:/home/master/.m2/repository/com/typesafe/akka/akka-actor_2.11/2.4.11/akka-actor_2.11-2.4.11-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/scala-lang/scala-library/2.11.8/scala-library-2.11.8.jar" sourcepath="M2_REPO/org/scala-lang/scala-library/2.11.8/scala-library-2.11.8-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/org/scala-lang/scala-library/2.11.8/scala-library-2.11.8-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/com/typesafe/config/1.3.0/config-1.3.0.jar" sourcepath="M2_REPO/com/typesafe/config/1.3.0/config-1.3.0-sources.jar">
