--- a/actor-system/.classpath
+++ b/actor-system/.classpath
@@ -4,6 +4,106 @@
   <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="var" path="M2_REPO/com/typesafe/akka/akka-actor_2.11/2.4.11/akka-actor_2.11-2.4.11.jar" sourcepath="M2_REPO/com/typesafe/akka/akka-actor_2.11/2.4.11/akka-actor_2.11-2.4.11-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/com/typesafe/akka/akka-actor_2.11/2.4.11/akka-actor_2.11-2.4.11-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/scala-lang/scala-library/2.11.8/scala-library-2.11.8.jar" sourcepath="M2_REPO/org/scala-lang/scala-library/2.11.8/scala-library-2.11.8-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/org/scala-lang/scala-library/2.11.8/scala-library-2.11.8-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/typesafe/config/1.3.0/config-1.3.0.jar" sourcepath="M2_REPO/com/typesafe/config/1.3.0/config-1.3.0-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/com/typesafe/config/1.3.0/config-1.3.0-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/scala-lang/modules/scala-java8-compat_2.11/0.7.0/scala-java8-compat_2.11-0.7.0.jar" sourcepath="M2_REPO/org/scala-lang/modules/scala-java8-compat_2.11/0.7.0/scala-java8-compat_2.11-0.7.0-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/org/scala-lang/modules/scala-java8-compat_2.11/0.7.0/scala-java8-compat_2.11-0.7.0-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/typesafe/akka/akka-remote_2.11/2.4.11/akka-remote_2.11-2.4.11.jar" sourcepath="M2_REPO/com/typesafe/akka/akka-remote_2.11/2.4.11/akka-remote_2.11-2.4.11-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/com/typesafe/akka/akka-remote_2.11/2.4.11/akka-remote_2.11-2.4.11-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/typesafe/akka/akka-stream_2.11/2.4.11/akka-stream_2.11-2.4.11.jar" sourcepath="M2_REPO/com/typesafe/akka/akka-stream_2.11/2.4.11/akka-stream_2.11-2.4.11-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/com/typesafe/akka/akka-stream_2.11/2.4.11/akka-stream_2.11-2.4.11-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/typesafe/ssl-config-akka_2.11/0.2.1/ssl-config-akka_2.11-0.2.1.jar" sourcepath="M2_REPO/com/typesafe/ssl-config-akka_2.11/0.2.1/ssl-config-akka_2.11-0.2.1-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/com/typesafe/ssl-config-akka_2.11/0.2.1/ssl-config-akka_2.11-0.2.1-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/typesafe/ssl-config-core_2.11/0.2.1/ssl-config-core_2.11-0.2.1.jar" sourcepath="M2_REPO/com/typesafe/ssl-config-core_2.11/0.2.1/ssl-config-core_2.11-0.2.1-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/com/typesafe/ssl-config-core_2.11/0.2.1/ssl-config-core_2.11-0.2.1-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/scala-lang/modules/scala-parser-combinators_2.11/1.0.4/scala-parser-combinators_2.11-1.0.4.jar" sourcepath="M2_REPO/org/scala-lang/modules/scala-parser-combinators_2.11/1.0.4/scala-parser-combinators_2.11-1.0.4-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/org/scala-lang/modules/scala-parser-combinators_2.11/1.0.4/scala-parser-combinators_2.11-1.0.4-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/reactivestreams/reactive-streams/1.0.0/reactive-streams-1.0.0.jar" sourcepath="M2_REPO/org/reactivestreams/reactive-streams/1.0.0/reactive-streams-1.0.0-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/org/reactivestreams/reactive-streams/1.0.0/reactive-streams-1.0.0-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/typesafe/akka/akka-protobuf_2.11/2.4.11/akka-protobuf_2.11-2.4.11.jar" sourcepath="M2_REPO/com/typesafe/akka/akka-protobuf_2.11/2.4.11/akka-protobuf_2.11-2.4.11-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/com/typesafe/akka/akka-protobuf_2.11/2.4.11/akka-protobuf_2.11-2.4.11-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/io/netty/netty/3.10.6.Final/netty-3.10.6.Final.jar" sourcepath="M2_REPO/io/netty/netty/3.10.6.Final/netty-3.10.6.Final-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/io/netty/netty/3.10.6.Final/netty-3.10.6.Final-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/uncommons/maths/uncommons-maths/1.2.2a/uncommons-maths-1.2.2a.jar" sourcepath="M2_REPO/org/uncommons/maths/uncommons-maths/1.2.2a/uncommons-maths-1.2.2a-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/org/uncommons/maths/uncommons-maths/1.2.2a/uncommons-maths-1.2.2a-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/io/aeron/aeron-driver/1.0.1/aeron-driver-1.0.1.jar" sourcepath="M2_REPO/io/aeron/aeron-driver/1.0.1/aeron-driver-1.0.1-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/io/aeron/aeron-driver/1.0.1/aeron-driver-1.0.1-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/io/aeron/aeron-client/1.0.1/aeron-client-1.0.1.jar" sourcepath="M2_REPO/io/aeron/aeron-client/1.0.1/aeron-client-1.0.1-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/io/aeron/aeron-client/1.0.1/aeron-client-1.0.1-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/agrona/Agrona/0.5.4/Agrona-0.5.4.jar" sourcepath="M2_REPO/org/agrona/Agrona/0.5.4/Agrona-0.5.4-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/org/agrona/Agrona/0.5.4/Agrona-0.5.4-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/typesafe/akka/akka-cluster_2.11/2.4.11/akka-cluster_2.11-2.4.11.jar" sourcepath="M2_REPO/com/typesafe/akka/akka-cluster_2.11/2.4.11/akka-cluster_2.11-2.4.11-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/com/typesafe/akka/akka-cluster_2.11/2.4.11/akka-cluster_2.11-2.4.11-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/typesafe/akka/akka-persistence_2.11/2.4.11/akka-persistence_2.11-2.4.11.jar" sourcepath="M2_REPO/com/typesafe/akka/akka-persistence_2.11/2.4.11/akka-persistence_2.11-2.4.11-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/com/typesafe/akka/akka-persistence_2.11/2.4.11/akka-persistence_2.11-2.4.11-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/typesafe/akka/akka-slf4j_2.11/2.4.11/akka-slf4j_2.11-2.4.11.jar" sourcepath="M2_REPO/com/typesafe/akka/akka-slf4j_2.11/2.4.11/akka-slf4j_2.11-2.4.11-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/com/typesafe/akka/akka-slf4j_2.11/2.4.11/akka-slf4j_2.11-2.4.11-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.7.16/slf4j-api-1.7.16.jar" sourcepath="M2_REPO/org/slf4j/slf4j-api/1.7.16/slf4j-api-1.7.16-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/master/.m2/repository/org/slf4j/slf4j-api/1.7.16/slf4j-api-1.7.16-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
   <classpathentry kind="var" path="M2_REPO/junit/junit/4.12/junit-4.12.jar" sourcepath="M2_REPO/junit/junit/4.12/junit-4.12-sources.jar">
     <attributes>
       <attribute value="jar:file:/home/master/.m2/repository/junit/junit/4.12/junit-4.12-javadoc.jar!/" name="javadoc_location"/>
