--- a/adaptor-parent/pom.xml
+++ b/adaptor-parent/pom.xml
@@ -19,6 +19,7 @@
 		<jaxb-impl.version>2.1.13</jaxb-impl.version>
 		<servlet-api.version>3.1.0</servlet-api.version>
 		<spring.version>4.3.0.RELEASE</spring.version>
+		<spring4.version>4.3.0.RELEASE</spring4.version>
 		<jersey.version>2.25</jersey.version>
 		<commons-beanutils.version>1.9.2</commons-beanutils.version>
 		<joda-time.version>2.9.4</joda-time.version>
