--- a/test-component/pom.xml
+++ b/test-component/pom.xml
@@ -19,7 +19,11 @@
 			<artifactId>component-manager</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-
+		<dependency>
+			<groupId>monetdb</groupId>
+			<artifactId>monetdb-jdbc</artifactId>
+			<version>2.24</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -27,4 +31,14 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+  <repositories>
+    <repository>
+      <id>clojars.releases</id>
+      <name>Clojars</name>
+      <url>http://clojars.org/repo</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+    </repository>
+  </repositories>
 </project>
